AC_INIT([house], [0.1], [mymail])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
dnl Check for SDL
SDL_VERSION=2.0.8
AM_PATH_SDL2($SDL_VERSION,:,AC_MSG_ERROR([*** SDL version $SDL_VERSION not found]))

PKG_CHECK_MODULES([GL],[gl])
PKG_CHECK_MODULES([GLU], [glu])
PKG_CHECK_MODULES([SDL2_IMAGE], [SDL2_image])

CFLAGS="$CFLAGS $SDL_FLAGS $GL_CFLAGS $GLU_CFLAGS $SDL2_IMAGE_FLAGS"
LIBS="$LIBS $SDL_LIBS $GL_LIBS $GLU_LIBS $SDL2_IMAGE_LIBS"
AC_OUTPUT
